--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "repository": "git@github.com:maycongc/proffy-server.git",
   "author": "Maycon Gorgonha <maycon.gorgonha@hotmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev:server": "tsnd --inspect --ignore-watch node_modules --respawn --transpile-only ./src/server.ts"
+  },
   "dependencies": {
     "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
+    "ts-node-dev": "^1.0.0-pre.56",
     "typescript": "^3.9.7"
   }
 }
