--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "proffy-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.ts",
   "repository": "git@github.com:maycongc/proffy-server.git",
   "author": "Maycon Gorgonha <maycon.gorgonha@hotmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev:server": "tsnd --inspect --ignore-watch node_modules --respawn --transpile-only ./src/server.ts"
+    "dev:server": "tsnd --inspect --ignore-watch node_modules --respawn --transpile-only src/server.ts"
   },
   "dependencies": {
     "express": "^4.17.1"
