--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev:server": "tsnd --inspect --ignore-watch node_modules --respawn --transpile-only src/server.ts"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.21.2",
+    "pg": "^8.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
