--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Maycon Gorgonha <maycon.gorgonha@hotmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev:server": "tsnd --inspect --ignore-watch node_modules --respawn --transpile-only src/server.ts"
+    "dev:server": "tsnd --inspect --ignore-watch node_modules --respawn --transpile-only src/server.ts",
+    "knex:up": "knex migrate:latest",
+    "knex:down": "knex migrate:rollback"
   },
   "dependencies": {
     "express": "^4.17.1",
