--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,8 @@
 		"prettier"
 	],
 	"rules": {
+		"func-names": ["warn", "never"],
+		"class-methods-use-this": "off",
 		"camelcase": "off",
 		"prettier/prettier": "error",
 		"import/extensions": [
