--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "knex:down": "knex migrate:rollback"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.2",
     "pg": "^8.3.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
